# chatbox

./: pyproject.toml
chatbox/: consumers.py  views.py
chatbox/templates/: index.html
config/: asgi.py  settings.py  urls.py
