[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Jean Landim <jewanbb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
python-dotenv = "^0.19.2"
django-channels = "^0.7.0"
channels-redis = "^3.3.1"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
